--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DUCK_DB_TOKEN=${DUCK_DB_TOKEN}
+    volumes:
+      - checkpoints-local:/app/data
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -27,7 +29,7 @@ services:
     profiles:
       - hub
     image: kunsitudocker/stock-assistant:latest
-    container_name: stock-assistant
+    container_name: stock-assistant-hub
     ports:
       - "8000:8000"
     env_file:
@@ -35,6 +37,8 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DUCK_DB_TOKEN=${DUCK_DB_TOKEN}
+    volumes:
+      - checkpoints-hub:/app/data     
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -42,3 +46,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+
+volumes:
+  checkpoints-local:
+  checkpoints-hub:
