--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -4,9 +4,9 @@ on:
   # push:
   #   branches:
   #     - main        # Trigger on push to main
-  # pull_request:
-  #   branches:
-  #     - main        # Run on PRs to main (build only, no push)
+  pull_request:
+    branches:
+      - main        # Run on PRs to main (build only, no push)
   workflow_dispatch:  # Allow manual trigger from GitHub UI
 
 env:
