--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
 name: Linting and Validation
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: 
+     - "main" 
 
 jobs:
   python-lint:
