--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,9 +1,9 @@
 name: Run Unit Tests
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   pull_request:
     branches:
       - main
@@ -32,4 +32,3 @@ jobs:
         run: |
           python -m unittest tests/unit_test.py -v
           echo "✅ Unit tests completed"
-          
