--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DUCK_DB_TOKEN=${DUCK_DB_TOKEN}
       - ENABLE_LOGGING=true
+      - AUTH_USERS=${AUTH_USERS}
+      - CHAINLIT_AUTH_SECRET=${CHAINLIT_AUTH_SECRET}
     volumes:
       - checkpoints-hub:/app/data     
     restart: unless-stopped
