--- a/.github/workflows/deploy-to-web.yml
+++ b/.github/workflows/deploy-to-web.yml
@@ -12,7 +12,9 @@ env:
   TF_VAR_openai_api_key: ${{ secrets.OPENAI_API_KEY }}
   TF_VAR_duck_db_token: ${{ secrets.DUCK_DB_TOKEN }}
   TF_VAR_docker_image: ${{ secrets.DOCKERHUB_USERNAME }}/stock-assistant:latest
-
+  TF_VAR_chainlit_auth_secret: ${{ secrets.CHAINLIT_AUTH_SECRET }}
+  TF_VAR_auth_users: ${{ secrets.AUTH_USERS }}
+  
 jobs:
   deploy:
     name: Deploy to Koyeb via Terraform
