--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,5 @@ DUCK_DB_TOKEN=your_duck_db_token_here
 # Comma-separated list of username:password pairs for authentication
 AUTH_USERS=admin:yourpassword,user2:anotherpassword
 
-# Enable or disable logging default is false
+# Enable or disable logging to duckdb default is false
 ENABLE_LOGGING=false
